// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Requests /> should render correctly 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        "/requests",
      ]
    }
  >
    <IntlProvider
      locale="en"
    >
      <Connect(Requests) />
    </IntlProvider>
  </MemoryRouter>
</Provider>
`;

exports[`<Requests /> should render correctly in loading state 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        "/requests",
      ]
    }
  >
    <IntlProvider
      locale="en"
    >
      <Connect(Requests)
        isLoading={true}
      />
    </IntlProvider>
  </MemoryRouter>
</Provider>
`;
